--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li class="active"><a href="/">Hem</a></li>
 				<li><a href="http://blog.softia.se/">Blog</a></li>
 				<li><a href="/">Twitter</a></li>
-				<li><a href="mailto:softia@softia.se">Kontakt</a></li>
+				<li><a href="mailto:info@softia.se">Kontakt</a></li>
 			</ul>
 		</div>
 	</div>
