--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<ul id="nav">
 				<li class="active"><a href="/">Hem</a></li>
 				<li><a href="http://www.twitter.com/yomodotse">Twitter</a></li>
-				<li><a href="mailto:softia@softia.se">Kontakt</a></li>
+				<li><a href="mailto:info@softia.se">Kontakt</a></li>
 			</ul>
 		</div>
 	</div>
