Fixat fbsida länken

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<div class="fb-like" data-href="http://www.facebook.com/pages/Yomose/190446437666178" data-send="true" data-width="450" data-show-faces="true"></div>
+<div class="fb-like" data-href="http://www.facebook.com/Yomo.se" data-send="true" data-width="450" data-show-faces="true"></div>
 
 
 				</div>
