--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+<meta name="google-site-verification" content="ZbEALR420jpOh8SdQBQeUb98gm6aJh9hKFKPlwlRRM8" />
 <!-- metadata -->
 <title>softia - development evolved</title>
 
