--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <meta name="google-site-verification" content="ZbEALR420jpOh8SdQBQeUb98gm6aJh9hKFKPlwlRRM8" />
 <!-- metadata -->
-<title>softia - development evolved</title>
+<title>codespark - development evolved</title>
 
 <!-- tech includes -->
 <link rel="stylesheet" type="text/css" href="media/css/reset.css" />
