--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
 	<div id="header">
 		<div class="container">
-			<a id="logo" href="/"><img src="media/img/softia_logo.png" alt="Codespark logo"/></a>
+			<a id="logo" style="text-decoration: none;" href="/"><span style="text-decoration: none;font-weight: bold;font-size: 29px;color: #111;">Codespark</span></a>
 			<ul id="nav">
 				<li class="active"><a href="/">Hem</a></li>
 				<li><a href="http://www.twitter.com/yomodotse">Twitter</a></li>
