--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <div class="col-lg-4 col-lg-offset-4">
                     <i class="fa fa-cogs  pull-left" style="font-size:40px;"></i>
                     <p style="margin-left:50px;">
-						Tillsammans har vi över 10 år i yrket. Vi har jobbat företag med hög last och snabba omvändningar där vi hanterar stora mängder data.
+						Tillsammans har vi över 10 år i yrket. Vi har jobbat med företag som har hög last och snabba omvändningar där vi hanterar stora mängder data.
 					</p>
                 </div>
                 <div class="col-lg-4">
